fix(style): Update 'Resubscribe' button styles to have more flexibility with text
Remove extra space accidentally added

--- a/packages/fxa-payments-server/src/routes/Subscriptions/index.scss
+++ b/packages/fxa-payments-server/src/routes/Subscriptions/index.scss
@@ -111,8 +111,11 @@
         display: block;
         font-weight: 600;
         padding: 0 16px;
-        width: 128px;
       }
+    }
+
+    .subscription-cancelled-details {
+      flex: 4;
     }
   }
 
